@@ -39,6 +39,9 @@ Changes in stable release 2.4.16 (not released yet)
 
 * The NoWarp menu position hint option works with root menus too.
 
+* Fixed a problem with styles not being properly applied after a
+  DestroyStyle command.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.15 (24-Jan-2003)
