@@ -1,3 +1,8 @@
+2003-05-19  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/style.c (check_window_style_change):
+	fixed update of window styles w/ DestroyStyle
+
 2003-04-25  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (do_menu):
